# CSUNetwork

./: Cargo.toml  Readme.md
src/: main.rs
src/backend/: auth.rs  authentication.rs  config.rs  downloader.rs  logger.rs  mod.rs  network_monitor.rs
src/frontend/: mod.rs  ui.rs
